[package]
name = "exchange-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7"
actix-multipart = "0.7"
actix-web = { version = "4", features = ["rustls-0_23"] }
aes-gcm = { version = "0.10", features = ["std"] }
askama = "0.14"
askama_web = { version = "0.14", features = ["actix-web-4"] }
async-stream = "0.3"
async_zip = { version = "0.0.17", features = ["tokio", "deflate"] }
async-tempfile = { version = "0.7", default-features = false }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "6"
env_logger = "0.11"
log = "0.4"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs"] }
tokio-util = "0.7"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
lto = true
strip = true